# Rex

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  diesel.toml  dist-workspace.toml  tombi.toml  typos.toml
.github/workflows/: main.yml  release.yml  rust.yml
app/: Cargo.toml
app/src/: conn.rs  lib.rs  migration.rs  utils.rs
app/src/fetcher/: activity_view.rs  add.rs  chart_view.rs  mod.rs  search_view.rs  summary_models.rs  summary_view.rs  tx_view.rs  txs.rs
app/src/modifier/: delete_tx.rs  mod.rs  new_activity.rs  new_method.rs  new_tx.rs  shared.rs
app/src/ui_helper/: autofiller.rs  mod.rs  outputs.rs  shared.rs  stepper.rs  verifier.rs
app/src/views/: activity_view.rs  chart_view.rs  mod.rs  search_view.rs  summary_models.rs  summary_view.rs  tx_view.rs
app/tests/: activity_view.rs  add_tx.rs  autofiller.rs  balance_table.rs  chart_view.rs  common.rs  delete_tx.rs  edit_tx.rs  parse.rs  position_swap.rs  search_amount.rs  search_tx.rs  search_view.rs  stepper.rs  summary.rs  tag_rename.rs  tx_methods.rs  tx_types.rs  tx_view.rs  verifier.rs
core/: Cargo.toml
core/src/: conn.rs  lib.rs
core/src/fetcher/: mod.rs  tx_view.rs  txs.rs
db/: Cargo.toml
db/src/: lib.rs  schema.rs
db/src/migrations/2025-08-26-004622_initial/: down.sql  up.sql
db/src/migrations/2025-10-30-101312-0000_new_tx_types/: down.sql  up.sql
db/src/migrations/2025-10-31-114912-0000_primary_tag/: down.sql  up.sql
db/src/models/: activities.rs  activity_tx_tags.rs  activity_txs.rs  balances.rs  mod.rs  others.rs  tags.rs  tx_methods.rs  tx_tags.rs  txs.rs
shared/: Cargo.toml
shared/src/: models.rs
src/: add_tx_data.rs  add_tx_ui.rs  create_initial_db.rs  data_struct.rs  db.rs  home_page.rs  initial_page.rs  interface.rs  key_checker.rs  lib.rs  main.rs  popup_page.rs  sub_func.rs  table_data.rs  table_ui.rs  transaction_ui.rs  transfer_page.rs  tx_page.rs  ui_data_state.rs  ui_render.rs
src/activity_page/: activity_data.rs  activity_ui.rs  mod.rs
src/add_tx_page/: add_tx_data.rs  add_tx_ui.rs  mod.rs
src/chart_page/: chart_data.rs  chart_ui.rs  mod.rs
src/db/: create_initial_db.rs  manage_db.rs  mod.rs  setup.rs  sub_func.rs  tx_manager.rs  update.rs  verifier.rs
src/history_page/: history_data.rs  history_ui.rs  mod.rs
src/home_page/: home_data.rs  home_ui.rs  mod.rs  table_data.rs  table_ui.rs  ui_data_state.rs
src/initial_page/: initial_ui.rs  mod.rs  starter_ui.rs  version_checker.rs
src/key_checker/: activity_keys.rs  add_tx_keys.rs  chart_keys.rs  history_keys.rs  home_keys.rs  initial_keys.rs  key_handler.rs  mod.rs  search_keys.rs  summary_keys.rs  transfer_keys.rs
src/outputs/: error.rs  output.rs
src/page_handler/: initializer.rs  mod.rs  ui_handler.rs  ui_state.rs
src/popup_page/: mod.rs  popup_data.rs  popup_ui.rs
src/search_page/: search_ui.rs
src/summary_page/: mod.rs  summary_data.rs  summary_models.rs  summary_ui.rs
src/transfer_page/: mod.rs  transfer_data.rs  transfer_ui.rs
src/tx_handler/: add_tx.rs  delete_tx.rs  mod.rs  tx_data.rs  verifier.rs
src/tx_page/: add_tx_data.rs  add_tx_ui.rs  mod.rs
src/ui_handler/: initializer.rs  ui_handler.rs  ui_state.rs
src/utility/: lerp.rs  mod.rs  sub_func.rs  utils.rs  verifier.rs
src/utility/traits/: autofiller.rs  mod.rs  stepper.rs  verifier.rs
tests/: activity.rs  autofiller.rs  balance.rs  changes.rs  chart.rs  common.rs  db_calls.rs  db_creation.rs  db_updates.rs  home.rs  lerp.rs  others.rs  stepper.rs  summary.rs  tx.rs  tx_data.rs  tx_method.rs  ui_states.rs  utils.rs  verifier.rs
tests_old/: autofiller.rs  balance.rs  chart.rs  common.rs  db_creation.rs  db_updates.rs  tx.rs  ui_states.rs  utils.rs
tui/: Cargo.toml
tui/src/: config.rs  main.rs  theme.rs
tui/src/activity_page/: activity_ui.rs  mod.rs
tui/src/add_tx_page/: add_tx_ui.rs  mod.rs
tui/src/chart_page/: chart_ui.rs  mod.rs
tui/src/db/: setup.rs  update.rs
tui/src/home_page/: home_ui.rs  mod.rs
tui/src/initial_page/: initial_ui.rs  mod.rs
tui/src/key_checker/: activity.rs  activity_keys.rs  add_tx.rs  add_tx_keys.rs  chart.rs  chart_keys.rs  home.rs  home_keys.rs  initial.rs  initial_keys.rs  key_handler.rs  mod.rs  popup.rs  search.rs  search_keys.rs  summary.rs  summary_keys.rs
tui/src/outputs/: error.rs  mod.rs  output.rs
tui/src/page_handler/: initializer.rs  mod.rs  ui_handler.rs  ui_state.rs
tui/src/pages/: activity_ui.rs  add_tx_ui.rs  chart_ui.rs  home_ui.rs  initial_ui.rs  mod.rs  popup_data.rs  popup_ui.rs  search_ui.rs  summary_ui.rs
tui/src/pages/popups/: choice.rs  help_text.rs  info.rs  input.rs  mod.rs  models.rs  new_path.rs  reposition.rs
tui/src/popup_page/: mod.rs  popup_data.rs
tui/src/search_page/: mod.rs  search_ui.rs
tui/src/summary_page/: mod.rs  summary_data.rs  summary_ui.rs
tui/src/tx_handler/: delete_tx.rs  mod.rs  tx_data.rs
tui/src/utility/: lerp.rs  mod.rs  sub_func.rs  utils.rs  version_checker.rs
tui/src/utility/traits/: mod.rs  stepper.rs  verifier.rs
