[workspace]
members = ["app", "db", "shared", "tui"]

resolver = "2"

[workspace.dependencies]
rex-shared = "0.1.0"
rex-db = "0.1.0"
rex-app = "0.1.0"
chrono = "0.4.42"
diesel = { version = "2.3.2", default-features = false, features = [
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
    "chrono",
] }
anyhow = "1.0.100"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[patch.crates-io]
rex-shared = { path = "shared" }
rex-db = { path = "db" }
rex-app = { path = "app" }
