[workspace]
members = ["app", "db", "shared", "tui"]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
diesel = {
  version = "2.3.7",
  default-features = false,
  features = [
    "chrono",
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
  ]
}
rex-app = "0.2.7"
rex-db = "0.2.7"
rex-shared = "0.2.7"
strum = "0.28.0"
strum_macros = "0.28"

[patch.crates-io]
rex-app = { path = "app" }
rex-db = { path = "db" }
rex-shared = { path = "shared" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
