[package]
name = "rex-app"
version = "0.2.0"
edition = "2024"
description = """
Core functionality for Rex
"""
homepage = "https://github.com/TheRustyPickle/Rex"
repository = "https://github.com/TheRustyPickle/Rex"
license = "MIT"

[dependencies]
rex-db.workspace = true
rex-shared.workspace = true
chrono.workspace = true
anyhow.workspace = true
diesel.workspace = true
strsim = "0.11.1"
thiserror = "2.0.17"

[lints.clippy]
too_many_arguments = { level = "allow" }
