[package]
name = "rex-db"
version = "0.2.0"
edition = "2024"
description = """
Rex database models using diesel
"""
homepage = "https://github.com/TheRustyPickle/Rex"
repository = "https://github.com/TheRustyPickle/Rex"
license = "MIT"

[dependencies]
rex-shared.workspace = true
diesel.workspace = true
chrono.workspace = true
anyhow.workspace = true
diesel_migrations = "2.3.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
