[package]
name = "rex-db"
version = "0.2.7"
edition = "2024"
description = """
Rex database models using diesel
"""
homepage = "https://github.com/TheRustyPickle/Rex"
repository = "https://github.com/TheRustyPickle/Rex"
license = "MIT"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel_migrations = "2.3.1"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
rex-shared.workspace = true
strum.workspace = true
strum_macros.workspace = true
